--- a/index.html
+++ b/index.html
@@ -1,10 +1,87 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <link rel="stylesheet" href="styles/fonts.css">
     <link rel="stylesheet" href="styles/main.css">
     <title>Lesson 6</title>
 </head>
+
 <body>
+    <header class="header-wrapper">
+        <nav>
+            <ul>
+                <li class="navbar-li">
+                    <a href="#">HOME</a>
+                </li>
+                <li class="navbar-li">
+                    <a href="#">HOME</a>
+                </li>
+                <li class="navbar-li">
+                    <a href="#">HOME</a>
+                </li>
+            </ul>
+        </nav>
+    </header>
+    <div class="wrapper">
+        <div class="fixed"></div>
+        <h1>Title</h1>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident sunt placeat
+            quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis! Molestias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident sunt placeat
+            quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis! Molestias.
+        </p>
+        <div class="sticky">I AM STICKY</div>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident sunt placeat
+            quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis! Molestias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident sunt placeat
+            quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis! Molestias.
+        </p>
+        <div class="image-wrapper">
+            <img class="kata" src="pictures/british.jpeg" alt="british shorthair">
+            <h4 class="piso">Sunshine</h4>
+        </div>
+        <p class="text">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident sunt placeat
+            quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis! Molestias.
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident sunt placeat
+            quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis!
+            Molestias.Lorem ipsum dolor sit amet consectetur adipisicing elit. Nesciunt modi neque qui sed provident
+            sunt placeat quo
+            asperiores, nihil possimus obcaecati illum soluta fugit amet veniam vero, repellat veritatis! Molestias.
+    </div>
 </body>
+
 </html>
